--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
 </head>
 
 <body>
-    <p>Welcome to react calculator</p>
+    
+    <div id= 'app'>
+
+    </div>
+    <script src="./bundle.js"></script>
 </body>
+
 
 </html>
